Fixed height issue in base.css and spacing in results header.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -82,14 +82,14 @@ h1 {
 .col2 {
   width: 55%;
   float: left;
-  height: 824px;
+  height: 836px;
 }
 
 .col1 {
   overflow: auto;
   width: 45%;
   position: relative;
-  height: 906px;
+  height: 918px;
   border-right: 1px solid #ccc;
 }
 
@@ -107,10 +107,11 @@ h1 {
 }
 
 .col .header .return-total {
-  font-size: .7em;
+  font-size: 1em;
   color: rgb(11, 71, 141);
   cursor: pointer;
-  margin-left: 4px;
+  margin-left: 10px;
+  font-weight: bold;
 }
 
 .col .header .return-total:hover {
@@ -129,6 +130,7 @@ h1 {
   display: block;
   font-size: 0.7em;
   font-weight: normal;
+  margin-top: 4px;
 }
 .col .reporting {
   font-size: 0.7em;
